Fix position of chapter number to not overlap title.

--- a/site/style.css
+++ b/site/style.css
@@ -92,6 +92,12 @@ article.chapter .challenges, article.chapter .design-note {
         font-weight: 400; }
   article.chapter .challenges pre, article.chapter .design-note pre {
     margin: 0; }
+  article.chapter .challenges blockquote p, article.chapter .design-note blockquote p {
+    margin: 0 24px;
+    font: italic 16px/24px "Source Sans Pro", sans-serif;
+    color: #444; }
+  article.chapter .challenges blockquote::before, article.chapter .challenges blockquote::after, article.chapter .design-note blockquote::before, article.chapter .design-note blockquote::after {
+    content: none; }
   article.chapter .challenges aside code, article.chapter .challenges aside .codehilite, article.chapter .design-note aside code, article.chapter .design-note aside .codehilite {
     color: #595959;
     background: #faf8f5; }
@@ -548,7 +554,7 @@ article {
   article .number {
     position: absolute;
     top: 50px;
-    right: 0;
+    left: 624px;
     z-index: 1;
     font: 300 96px "Source Sans Pro", sans-serif;
     color: #dee9ed; }
@@ -738,7 +744,15 @@ footer {
 
   article {
     width: inherit;
-    margin-right: 336px; } }
+    margin-right: 336px; }
+    article .number {
+      top: 73px;
+      left: inherit;
+      right: 0;
+      font-size: 72px; }
+    article h1 {
+      padding: 110px 0 18px 0;
+      font-size: 44px; } }
 @media only screen and (max-width: 960px) {
   body {
     margin: 0; }
